// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Dev Component should change files appropriately 1`] = `
"/**
 * @license
 * Copyright 2020 Dynatrace LLC
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
// @ts-nocheck
import { HttpClientModule } from '@angular/common/http';
import { DtIconModule } from '@dynatrace/barista-components/icon';
import {
  DT_UI_TEST_CONFIG,
  DT_DEFAULT_UI_TEST_CONFIG,
} from '@dynatrace/barista-components/core';
import { AlertDemo } from './alert/alert-demo.component';
  
@Component({ template: '' })
export class NoopRouteComponent {}

@NgModule({
  declarations: [
    DevApp,
    ContainerBreakpointObserverDemo,
    AlertDemo
  ],
})
export class AppModule {}

"
`;

exports[`Add Dev Component should change files appropriately 2`] = `
"/**
 * @license
 * Copyright 2020 Dynatrace LLC
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import { RouterModule, Routes } from '@angular/router';
import { AlertDemo } from './alert/alert-demo.component';
import { AlertDemo } from './alert/alert-demo.component';
  
const routes: Routes = [
  { path: 'sidenav', component: SidenavDemo },
  { path: 'tree-table', component: TreeTableDemo },
  { path: 'alert', component: AlertDemo },
];

@NgModule({
  exports: [RouterModule],
  imports: [RouterModule.forRoot(routes)],
})
export class DevAppRoutingModule {}
"
`;

exports[`Add Dev Component should change files appropriately 3`] = `
"/**
 * @license
 * Copyright 2020 Dynatrace LLC
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
// @ts-nocheck
interface NavItem {
  name: string;
  route: string;
}

export class DevApp {
  navItems: NavItem[] = [
    { name: 'Top-bar-navigation', route: '/top-bar-navigation' },
    { name: 'TreeTable', route: '/tree-table' },
    { name: 'Alert', route: '/alert' },
  ];
  selectedTheme = 'turquoise';
  themes = [
    { value: 'turquoise', name: 'Turquoise' },
  ];
}
"
`;

exports[`Add Dev Component should generate files with the appropriate content 1`] = `
"<dt-alert id=\\"test-alert\\">alert</dt-alert>
"
`;

exports[`Add Dev Component should generate files with the appropriate content 2`] = `""`;

exports[`Add Dev Component should generate files with the appropriate content 3`] = `
"/**
 * @license
 * Copyright 2020 Dynatrace LLC
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import { Component } from '@angular/core';

@Component({
  selector: 'dt-dev-alert',
  templateUrl: 'alert-demo.component.html',
  styleUrls: ['alert-demo.component.scss'],
})
export class AlertDemo {

}
"
`;
